Se creó con Colab

--- a/assignments/3-Machine-Learning-basics-with-Python.ipynb
+++ b/assignments/3-Machine-Learning-basics-with-Python.ipynb
@@ -16,7 +16,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
@@ -77,13 +77,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
         },
         "id": "1u1tWvnlqr94",
-        "outputId": "afa7244c-ae78-440a-814e-1b4e56140f2a",
+        "outputId": "7b80de30-c219-4a66-ba43-de0cc64ca9d1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -97,7 +97,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 5
         }
       ],
       "source": [
@@ -106,13 +106,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
         },
         "id": "w9Ik6r6Dqr94",
-        "outputId": "6ab5625e-2ebb-4c65-e7f3-d93aa7669410",
+        "outputId": "4d14f7cb-f45f-4683-9971-8b0cc0f402ba",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -275,7 +275,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 6
         }
       ],
       "source": [
@@ -284,13 +284,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
         },
         "id": "nFv-H-tBqr95",
-        "outputId": "1f5166c1-904e-4170-c6b8-848e1bde7d72",
+        "outputId": "c232cb71-13b9-4bfe-8986-8a016db4ebc3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -310,7 +310,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 7
         }
       ],
       "source": [
@@ -319,13 +319,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
         },
         "id": "7kYyC5Ijqr95",
-        "outputId": "a8426e4b-fdf5-4ef8-b3f9-87f2deb24411",
+        "outputId": "91f2475c-af20-4b3b-cfc6-aa39af9596ac",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -345,13 +345,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
         },
         "id": "iceDFHD4qr95",
-        "outputId": "0d46b519-c70a-4230-9454-438c15e52a8f",
+        "outputId": "abdc13d9-f03c-4111-d196-76c38aacc661",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -365,7 +365,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 9
         }
       ],
       "source": [
@@ -374,27 +374,102 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
         },
-        "id": "-zjaSBW5qr95"
+        "id": "-zjaSBW5qr95",
+        "outputId": "fa191383-f936-4eae-85c4-c8bc81d91681",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            ".. _iris_dataset:\n",
+            "\n",
+            "Iris plants dataset\n",
+            "--------------------\n",
+            "\n",
+            "**Data Set Characteristics:**\n",
+            "\n",
+            ":Number of Instances: 150 (50 in each of three classes)\n",
+            ":Number of Attributes: 4 numeric, predictive attributes and the class\n",
+            ":Attribute Information:\n",
+            "    - sepal length in cm\n",
+            "    - sepal width in cm\n",
+            "    - petal length in cm\n",
+            "    - petal width in cm\n",
+            "    - class:\n",
+            "            - Iris-Setosa\n",
+            "            - Iris-Versicolour\n",
+            "            - Iris-Virginica\n",
+            "\n",
+            ":Summary Statistics:\n",
+            "\n",
+            "============== ==== ==== ======= ===== ====================\n",
+            "                Min  Max   Mean    SD   Class Correlation\n",
+            "============== ==== ==== ======= ===== ====================\n",
+            "sepal length:   4.3  7.9   5.84   0.83    0.7826\n",
+            "sepal width:    2.0  4.4   3.05   0.43   -0.4194\n",
+            "petal length:   1.0  6.9   3.76   1.76    0.9490  (high!)\n",
+            "petal width:    0.1  2.5   1.20   0.76    0.9565  (high!)\n",
+            "============== ==== ==== ======= ===== ====================\n",
+            "\n",
+            ":Missing Attribute Values: None\n",
+            ":Class Distribution: 33.3% for each of 3 classes.\n",
+            ":Creator: R.A. Fisher\n",
+            ":Donor: Michael Marshall (MARSHALL%PLU@io.arc.nasa.gov)\n",
+            ":Date: July, 1988\n",
+            "\n",
+            "The famous Iris database, first used by Sir R.A. Fisher. The dataset is taken\n",
+            "from Fisher's paper. Note that it's the same as in R, but not as in the UCI\n",
+            "Machine Learning Repository, which has two wrong data points.\n",
+            "\n",
+            "This is perhaps the best known database to be found in the\n",
+            "pattern recognition literature.  Fisher's paper is a classic in the field and\n",
+            "is referenced frequently to this day.  (See Duda & Hart, for example.)  The\n",
+            "data set contains 3 classes of 50 instances each, where each class refers to a\n",
+            "type of iris plant.  One class is linearly separable from the other 2; the\n",
+            "latter are NOT linearly separable from each other.\n",
+            "\n",
+            ".. dropdown:: References\n",
+            "\n",
+            "  - Fisher, R.A. \"The use of multiple measurements in taxonomic problems\"\n",
+            "    Annual Eugenics, 7, Part II, 179-188 (1936); also in \"Contributions to\n",
+            "    Mathematical Statistics\" (John Wiley, NY, 1950).\n",
+            "  - Duda, R.O., & Hart, P.E. (1973) Pattern Classification and Scene Analysis.\n",
+            "    (Q327.D83) John Wiley & Sons.  ISBN 0-471-22361-1.  See page 218.\n",
+            "  - Dasarathy, B.V. (1980) \"Nosing Around the Neighborhood: A New System\n",
+            "    Structure and Classification Rule for Recognition in Partially Exposed\n",
+            "    Environments\".  IEEE Transactions on Pattern Analysis and Machine\n",
+            "    Intelligence, Vol. PAMI-2, No. 1, 67-71.\n",
+            "  - Gates, G.W. (1972) \"The Reduced Nearest Neighbor Rule\".  IEEE Transactions\n",
+            "    on Information Theory, May 1972, 431-433.\n",
+            "  - See also: 1988 MLC Proceedings, 54-64.  Cheeseman et al\"s AUTOCLASS II\n",
+            "    conceptual clustering system finds 3 classes in the data.\n",
+            "  - Many, many more ...\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "print(iris_dataset[\"DESCR\"])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 11,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
         },
         "id": "VCH9pJg1qr95",
-        "outputId": "99a0c0b0-fdcd-4397-a582-e5ac0288cb9a",
+        "outputId": "698d0187-860c-42da-994a-858ad1526ab3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -411,7 +486,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 11
         }
       ],
       "source": [
@@ -420,13 +495,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 12,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
         },
         "id": "HNPlm_90qr95",
-        "outputId": "5055f8eb-f235-4acd-b109-557b59dc887d",
+        "outputId": "1bfe376b-2025-4337-cdf4-14e734f896aa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
@@ -444,7 +519,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 12
         }
       ],
       "source": [
@@ -463,7 +538,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 13,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
@@ -494,13 +569,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 14,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
         },
         "id": "rEMA597Zqr96",
-        "outputId": "32c87bcb-12bf-4179-fb21-eff2698da0d1",
+        "outputId": "3baf4d6b-d70c-4095-d3b8-b08cf3d3fccb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -532,12 +607,12 @@
       ],
       "metadata": {
         "id": "cQmAseOks6QR",
-        "outputId": "6dd13102-d95f-434f-f815-549836435ddb",
+        "outputId": "f484982d-3761-4eb3-d0b8-2568645d5483",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -566,13 +641,13 @@
       ],
       "metadata": {
         "id": "rZ5Ov4o4s-Yr",
-        "outputId": "e6cdc347-49e6-473c-80a6-2575c1f3871a",
+        "outputId": "a57b7696-bddb-4290-fb98-d49edd949eba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 203
         }
       },
-      "execution_count": 14,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -594,7 +669,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e13f4265-5ad3-4fb4-85c4-065da1b8f627\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-6bcc08a9-47d5-4680-bed5-70b61ebfd6ab\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -667,7 +742,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e13f4265-5ad3-4fb4-85c4-065da1b8f627')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6bcc08a9-47d5-4680-bed5-70b61ebfd6ab')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -719,12 +794,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-e13f4265-5ad3-4fb4-85c4-065da1b8f627 button.colab-df-convert');\n",
+              "        document.querySelector('#df-6bcc08a9-47d5-4680-bed5-70b61ebfd6ab button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-e13f4265-5ad3-4fb4-85c4-065da1b8f627');\n",
+              "        const element = document.querySelector('#df-6bcc08a9-47d5-4680-bed5-70b61ebfd6ab');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -744,8 +819,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-04b62268-ca21-4fac-83d9-7ae9d2e13eb2\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-04b62268-ca21-4fac-83d9-7ae9d2e13eb2')\"\n",
+              "<div id=\"df-92351c97-d54f-4957-8fd4-f4ea5d602137\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-92351c97-d54f-4957-8fd4-f4ea5d602137')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -864,7 +939,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-04b62268-ca21-4fac-83d9-7ae9d2e13eb2 button');\n",
+              "        document.querySelector('#df-92351c97-d54f-4957-8fd4-f4ea5d602137 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -881,7 +956,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 16
         }
       ]
     },
@@ -900,7 +975,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 17,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
@@ -927,7 +1002,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 18,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
@@ -941,13 +1016,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 19,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
         },
         "id": "leHhc6Edqr96",
-        "outputId": "0e8b5dfc-0a02-4385-d530-c2aba07c7823",
+        "outputId": "623a887e-72d1-471a-fb07-b100037e4a83",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -988,7 +1063,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
@@ -997,12 +1072,13 @@
       },
       "outputs": [],
       "source": [
-        "# Write your code here"
+        "# Write your code here\n",
+        "pipe = Pipeline([('scaler', StandardScaler()), ('model', SVC(random_state=SEED))]) #StandardScaler y SVC"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
@@ -1036,7 +1112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
@@ -1045,19 +1121,63 @@
       },
       "outputs": [],
       "source": [
-        "# Write your code here"
+        "# Write your code here\n",
+        "pipe.fit(X_train, y_train) #pipleine\n",
+        "\n",
+        "y_pred = pipe.predict(X_test) #predict en test\n",
+        "\n",
+        "acc_train = pipe.score(X_train, y_train) #accuracy en train\n",
+        "acc_test = accuracy_score(y_test, y_pred) #accuracy en test"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "#para chequear acc por más que se use assert en el siguiente step\n",
+        "print(f\"Training Accuracy: {acc_train}\")\n",
+        "print(f\"Test Accuracy: {acc_test}\")"
+      ],
+      "metadata": {
+        "id": "06zYDQfOwXQv",
+        "outputId": "8858d153-30b9-4bf7-e441-6c51c00c9732",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Accuracy: 0.9833333333333333\n",
+            "Test Accuracy: 0.9333333333333333\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
         },
-        "id": "vQcW6PDkqr97"
+        "id": "vQcW6PDkqr97",
+        "outputId": "28659f59-fb4f-4638-c5bd-4a19704f7aaa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Predition count Counter({'setosa': 12, 'virginica': 10, 'versicolor': 8})\n"
+          ]
+        }
+      ],
       "source": [
         "assert np.allclose(acc_train, 0.9833333333333333)\n",
         "assert np.allclose(acc_test, 0.9333333333333333)\n",
@@ -1068,14 +1188,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
         },
-        "id": "Pk8t7seWqr97"
+        "id": "Pk8t7seWqr97",
+        "outputId": "c193f3af-8ba5-47d0-fdfa-198073cc4fe3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['petal length (cm)', 'petal width (cm)', 'sepal length (cm)', 'sepal width (cm)', 'target']\n",
+            "Counter({'setosa': 12, 'virginica': 10, 'versicolor': 8})\n",
+            "[10, 14, 15, 17, 21, 24, 30, 34, 35, 37, 46, 49, 51, 68, 76, 78, 80, 81, 83, 98, 106, 107, 113, 118, 121, 126, 132, 137, 138, 145]\n",
+            "['setosa', 'versicolor', 'virginica']\n"
+          ]
+        }
+      ],
       "source": [
         "print(str(answer_columns))\n",
         "print(str(answer_predictions))\n",
