--- a/assignments/2-Cleaning-a-dataset.ipynb
+++ b/assignments/2-Cleaning-a-dataset.ipynb
@@ -38,22 +38,9 @@
         "vscode": {
           "languageId": "plaintext"
         },
-        "id": "bWwVuaO_Lo-D",
-        "outputId": "863dca20-fecd-4e48-93f4-756547f02715",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "bWwVuaO_Lo-D"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m61.2/61.2 MB\u001b[0m \u001b[31m8.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!pip install -q eccd_datasets"
       ]
@@ -76,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 3,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
@@ -90,13 +77,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 4,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
         },
         "id": "EikKWjMBLo-E",
-        "outputId": "871a3574-ff79-4d97-de00-ab47a75a8f86",
+        "outputId": "8d426fb9-438c-445a-8e9c-1e7338e2bebd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -202,7 +189,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a4b908c7-3825-445e-87f3-3df1a6a48292\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-091d5bcd-d443-4290-82fe-3d3e63ad8a71\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -432,7 +419,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a4b908c7-3825-445e-87f3-3df1a6a48292')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-091d5bcd-d443-4290-82fe-3d3e63ad8a71')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -484,12 +471,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-a4b908c7-3825-445e-87f3-3df1a6a48292 button.colab-df-convert');\n",
+              "        document.querySelector('#df-091d5bcd-d443-4290-82fe-3d3e63ad8a71 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-a4b908c7-3825-445e-87f3-3df1a6a48292');\n",
+              "        const element = document.querySelector('#df-091d5bcd-d443-4290-82fe-3d3e63ad8a71');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -509,8 +496,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-01f2fafa-66b4-4808-bef1-4f46f13297ae\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-01f2fafa-66b4-4808-bef1-4f46f13297ae')\"\n",
+              "<div id=\"df-6821ff16-d9a7-4e62-a29f-aa5c5cb29bcd\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6821ff16-d9a7-4e62-a29f-aa5c5cb29bcd')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -629,7 +616,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-01f2fafa-66b4-4808-bef1-4f46f13297ae button');\n",
+              "        document.querySelector('#df-6821ff16-d9a7-4e62-a29f-aa5c5cb29bcd button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -645,7 +632,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 4
         }
       ],
       "source": [
@@ -654,13 +641,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 5,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
         },
         "id": "oMMtN7gCLo-E",
-        "outputId": "629cab9d-80d1-465d-d161-dc8f36d78a83",
+        "outputId": "0ec3427f-4b92-4b3c-d29b-a261fe64bced",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -674,7 +661,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 5
         }
       ],
       "source": [
@@ -692,13 +679,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 6,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
         },
         "id": "lA8YVguOLo-E",
-        "outputId": "152613c5-2dee-4f45-d714-24fe1f5fe3a5",
+        "outputId": "e4f87a30-9b79-417d-b68d-57e3324d73d2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 559
@@ -760,7 +747,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6859c7c2-9e8c-4b98-8a5c-940e363d307a\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-56229c2a-da8d-4513-b00c-93f5f020cb81\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -887,7 +874,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6859c7c2-9e8c-4b98-8a5c-940e363d307a')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-56229c2a-da8d-4513-b00c-93f5f020cb81')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -939,12 +926,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-6859c7c2-9e8c-4b98-8a5c-940e363d307a button.colab-df-convert');\n",
+              "        document.querySelector('#df-56229c2a-da8d-4513-b00c-93f5f020cb81 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-6859c7c2-9e8c-4b98-8a5c-940e363d307a');\n",
+              "        const element = document.querySelector('#df-56229c2a-da8d-4513-b00c-93f5f020cb81');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -964,8 +951,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-a82953ae-8854-45b0-94fa-5c747ddbb07c\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a82953ae-8854-45b0-94fa-5c747ddbb07c')\"\n",
+              "<div id=\"df-e3bcf5ec-7617-4524-a9de-e06e99a94d7d\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e3bcf5ec-7617-4524-a9de-e06e99a94d7d')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1084,7 +1071,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-a82953ae-8854-45b0-94fa-5c747ddbb07c button');\n",
+              "        document.querySelector('#df-e3bcf5ec-7617-4524-a9de-e06e99a94d7d button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1100,7 +1087,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 6
         }
       ],
       "source": [
@@ -1109,13 +1096,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 7,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
         },
         "id": "ysPKu7rzLo-E",
-        "outputId": "5150312e-1100-4e92-de29-2eba626552b1",
+        "outputId": "d4a565b8-298e-4de1-80be-d2c1680d9eba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 492
@@ -1177,7 +1164,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-eca70520-748c-47f6-8910-956f816b799e\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-e3a4e01e-c334-4ca8-8386-9efbe1c05312\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1304,7 +1291,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-eca70520-748c-47f6-8910-956f816b799e')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e3a4e01e-c334-4ca8-8386-9efbe1c05312')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1356,12 +1343,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-eca70520-748c-47f6-8910-956f816b799e button.colab-df-convert');\n",
+              "        document.querySelector('#df-e3a4e01e-c334-4ca8-8386-9efbe1c05312 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-eca70520-748c-47f6-8910-956f816b799e');\n",
+              "        const element = document.querySelector('#df-e3a4e01e-c334-4ca8-8386-9efbe1c05312');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1381,8 +1368,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-543e9465-8c82-49c4-9cfa-2853a7a00dae\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-543e9465-8c82-49c4-9cfa-2853a7a00dae')\"\n",
+              "<div id=\"df-2351adcf-0b6b-4c64-a810-46f044fef5a2\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-2351adcf-0b6b-4c64-a810-46f044fef5a2')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1501,7 +1488,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-543e9465-8c82-49c4-9cfa-2853a7a00dae button');\n",
+              "        document.querySelector('#df-2351adcf-0b6b-4c64-a810-46f044fef5a2 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1517,7 +1504,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 7
         }
       ],
       "source": [
@@ -1526,7 +1513,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
@@ -1540,7 +1527,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 9,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
@@ -1559,12 +1546,12 @@
       ],
       "metadata": {
         "id": "DR6F2pnBavKi",
-        "outputId": "c118ffd2-d4e5-4d2c-eb11-0d1afbd865d3",
+        "outputId": "24e9a073-d71d-4361-e2aa-d94100f4c60b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -1599,16 +1586,16 @@
     {
       "cell_type": "code",
       "source": [
-        "df['brand_name'].unique()"
+        "df['brand_name'].unique() #para chequear marcas a reemplazr"
       ],
       "metadata": {
         "id": "GF3im83kdcsU",
-        "outputId": "bd507180-9590-47fd-d28a-660b477ca5a9",
+        "outputId": "1f9a0bc5-99c9-4d52-b612-a390dff28740",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1630,7 +1617,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 11
         }
       ]
     },
@@ -1654,7 +1641,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 12,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
@@ -1673,16 +1660,16 @@
         "    new_string = \"victoria's secret\"\n",
         "    # Write your code here\n",
         "\n",
-        "    victorias_secret_var = [\"Victorias-Secret\", \"Victoria's Secret\", \"Victoria's Secret Pink\"]\n",
+        "    victorias_secret_var = [\"Victorias-Secret\", \"Victoria's Secret\", \"Victoria's Secret Pink\"] #Marcas a reemplazar\n",
         "\n",
-        "    df['brand_name'] = df['brand_name'].apply(lambda x: new_string if x in victorias_secret_var else x)\n",
+        "    df['brand_name'] = df['brand_name'].replace(victorias_secret_var, new_string) #replace con nuevo string\n",
         "\n",
         "    return df"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 13,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
@@ -1696,13 +1683,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 14,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
         },
         "id": "0_dDwjWjLo-F",
-        "outputId": "c8a6c445-d3b7-439f-a778-9023be01f386",
+        "outputId": "ba817220-78f3-4d03-aa47-3c55db367efb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1738,7 +1725,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 15,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
@@ -1754,22 +1741,19 @@
         "    In case a product has more than one price,\n",
         "    return the lowest one.\n",
         "    \"\"\"\n",
+        "    df = df.copy()\n",
         "\n",
-        "    # Write your code here\n",
-        "    df['price'] = df['price'].str.replace(r'[^\\d.,]', '', regex=True) #No puedo chequear todos los simbolos, voy por los más comunes dadoq ue si voy por $ específico rompe\n",
+        "    prices_extracted = df['price'].str.extractall(r'(\\d+\\.?\\d*)').astype(float) #extraigo precios\n",
         "\n",
-        "    df['price'] = df['price'].str.replace(r'(\\d)(?=\\d\\.\\d)', r'\\1,', regex=True) #PAra el caso específico de '19.9924.99'\n",
+        "    df['price'] = prices_extracted.groupby(level=0).min() #min por celda\n",
         "\n",
-        "    df['price'] = df['price'].str.split(\",|\\s\") #Para casos con más de 1 precio\n",
-        "\n",
-        "    df['price'] = df['price'].apply(lambda prices: np.min([float(price) for price in prices]))\n",
         "\n",
         "    return df\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 16,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
@@ -1783,13 +1767,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 17,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
         },
         "id": "3hL7ddVwLo-F",
-        "outputId": "6db425f6-04ec-45fe-e86c-a77ee8f5de8e",
+        "outputId": "0e2bc683-1ddf-42d4-f374-289dc77294aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1799,7 +1783,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "3146519.175999999\n"
+            "20191976.02\n"
           ]
         }
       ],
@@ -1810,7 +1794,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 18,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
@@ -1838,13 +1822,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 19,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
         },
         "id": "1CtWjnCULo-G",
-        "outputId": "6b8f1cf5-7e2d-4698-fcd4-055fea9c1736",
+        "outputId": "3f1e3710-d392-45a0-b044-9b4a6167fd74",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1854,8 +1838,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "highest_mean 9.99\n",
-            "lowest_mean 9.99\n"
+            "highest_mean 98.0\n",
+            "lowest_mean 3.6203030303030306\n"
           ]
         }
       ],
@@ -1863,7 +1847,7 @@
         "lowest_mean, highest_mean = low_high_product_mean(df_clean)\n",
         "assert np.allclose(lowest_mean, 3.6203030303030)\n",
         "print(\"highest_mean\", highest_mean)\n",
-        "print(\"lowest_mean\", highest_mean)"
+        "print(\"lowest_mean\", lowest_mean)"
       ]
     }
   ],
